# Founderos

./: .gitignore  README.md  components.json  documentation_technique_saas_cockpit_pattern_c.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ops-runner/: .env.example  README.md  package-lock.json  package.json
ops-runner/src/: api.js  handlers.js  index.js  ssh.js
public/: founderos-onboarding.js  widget.js
runner/: .env.example  README.md  package-lock.json  package.json
runner-vercel/: README.md  package.json  vercel.json
runner-vercel/api/: tick.js
runner-vercel/src/: env.js
runner/src/: browser.js  env.js  index.js  voice.js
scripts/: deploy.ps1  fix-skill-tools.js  import-skills.js
sdk/: README.md
sdk/go/: founderos.go  go.mod
sdk/js/: founderos.ts  package.json
sdk/php/: FounderOS.php  composer.json
sdk/python/: founderos.py  pyproject.toml
src/: main.tsx
src/app/: ProtectedRoute.tsx  router.tsx
src/components/: CodeBlock.tsx  ConfirmDialog.tsx  EmptyState.tsx  ErrorBoundary.tsx  ExportMenu.tsx  Logo.tsx  MetricCard.tsx  PageHeader.tsx  PromptDialog.tsx  ServiceBadge.tsx  SparkChart.tsx  ToastProvider.tsx  ai-kit.tsx  copilot-kit.tsx  discussion-kit.tsx  list-base-kit.tsx  list-kit.tsx  plate-editor.tsx  use-chat.ts
src/features/: GenericSubPage.tsx
src/hooks/: use-upload-file.ts  useConnectors.ts  useCurrentContext.ts  useFinance.ts  useWorkspace.ts
src/lib/: assistant-context.tsx  auth-context.tsx  (+10 more)
supabase/: config.toml
test-runner/: .env.example  README.md  package-lock.json  package.json
(+471 files in other folders)
