[project]
name = "founderos-analytics"
version = "0.1.0"
description = "FounderOS analytics SDK — product event tracking (server-side)."
readme = "../README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["founderos"]
